# Lux

./: .gitignore  CMakeLists.txt  Makefile  README.md  StructuralBlocks.md  compile_commands.json  lsp.md  main.out
docs/: index.md
docs/_ignore/: complete_ffi.md  ffi_plan.md  stdlib_plan.md  t_operators.md  type_methods.md  types.md
docs/advanced/: compiler-internals.md  extending.md  memory-model.md  optimization.md  ownership-migration.md
docs/ffi/: README.md  c-strings.md  calling-c.md  linking.md  overview.md  structs-abi.md
docs/getting-started/: cli-usage.md  editor-setup.md  hello-world.md  installation.md
docs/language/: arrays.md  concurrency.md  control-flow.md  doc-comments.md  enums.md  error-handling.md  expressions.md  functions.md  generics.md  intrinsics.md  memory-management.md  modules.md  namespaces.md  operators.md  overview.md  pointers.md  ranges.md  structs.md  syntax.md  tuples.md  type-aliases.md  types.md  unions.md  variables.md
docs/reference/: builtins.md  changelog.md  grammar.md  keywords.md  operator-precedence.md  type-methods.md
docs/stdlib/: ascii.md  bits.md  compress.md  conv.md  crypto.md  encoding.md  fmt.md  fs.md  hash.md  io.md  log.md  math.md  mem.md  net.md  os.md  overview.md  path.md  process.md  random.md  regex.md  string.md  test.md  thread.md  time.md
docs/tools/: helpc.md
editors/vscode-lux/: .vscodeignore  extension.js  package-lock.json  package.json
editors/vscode-tollvm/: language-configuration.json  package.json
errors/: main.lx
examples/args_test/: args_test.lx
examples/array_std/: array_std.tm
examples/arrow_test/: arrow_test.lx
examples/bits_test/: bits_test.lx
examples/bool_std/: bool_std.lx
examples/c_interop_test/: main.tm
examples/callback_test/: main.lx
examples/char_std/: char_std.lx  char_std.tm
examples/char_test/: char_test.lx
examples/compress_test/: compress_test.lx
examples/conv_test/: conv_test.lx
examples/crypto_test/: crypto_test.lx
examples/defer_test/: defer_test.tm
examples/encoding_test/: encoding_test.lx
examples/enum_std/: enum_std.lx
examples/enum_type_test/: colors.c  colors.h  main.lx
examples/errors/: checker_errors.lx  global_assert_fail.lx  global_assertmsg_fail.tm  global_panic.tm  global_unreachable.tm
examples/expressions/: arithmetic.lx  assignment.lx  bitwise.lx  cast_sizeof.tm  comparison.lx  incr_decr.lx  logical.tm  ternary.tm
examples/extend_std/: extend_std.tm
examples/ffi/: main.lx  main.tm
examples/float_std/: float_std.lx
examples/fmt_test/: fmt_test.lx
examples/fn_std/: fn_std.tm
examples/for_test/: for_test.lx
examples/fs_test/: fs_test.lx  fs_test.tm
examples/global_builtins/: global_builtins.tm
examples/global_var_test/: main.lx
examples/hash_test/: hash_test.lx
examples/if_test/: if_test.lx
examples/include_test/: main.lx
examples/int_std/: int_std.lx  int_std.tm
examples/io_test/: io_test.lx
examples/is_test/: is_test.lx
examples/list_comp/: main.tm
examples/local_include_test/: main.tm  mymath.h
examples/loop_test/: loop_test.lx
examples/macro_test/: main.tm
examples/main/: main.lx  main.tm
examples/map_test/: map_test.tm
examples/math_test/: math_test.lx
examples/mem_test/: mem_test.lx
examples/method_test/: method_test.lx
examples/namespace_test/: main.tm  math.lx
examples/net_test/: net_test.tm
examples/nullcoal_test/: nullcoal_test.tm
examples/os_test/: os_test.tm
examples/path_test/: path_test.lx
examples/pointer_std/: pointer_std.tm
examples/process_test/: process_test.lx  process_test.tm
examples/ptr_struct_test/: ptr_struct_test.lx
examples/random_test/: random_test.lx
examples/range_test/: range_test.lx
examples/regex_test/: regex_test.lx
examples/set_test/: set_test.tm
examples/sprintf_test/: sprintf_test.lx
examples/stderr_test/: stderr_test.tm
examples/string_std/: string_std.lx  string_std.tm
examples/string_test/: string_test.tm
examples/struct_abi_test/: main.tm  structs.c  structs.h
examples/struct_std/: struct_std.tm
examples/switch_test/: switch_test.tm
examples/test_framework_test/: test_framework_test.tm
examples/test_vec_builtins/: test_vec_builtins.tm
examples/thread_test/: thread_test.lx
examples/time_test/: time_test.lx
examples/try_catch_finally_test/: try_catch_finally_test.lx
examples/uint_std/: uint_std.lx
examples/uninit_test/: main.lx
examples/variadic_test/: variadic_test.lx  variadic_test.tm
examples/vec_test/: vec_test.lx
examples/while_test/: while_test.lx
grammar/: LuxLexer.g4  LuxParser.g4  ToLLVMLexer.g4  ToLLVMParser.g4
grammar/.antlr/: LuxLexer.interp  LuxLexer.java  LuxLexer.tokens  LuxParser.interp  LuxParser.java  LuxParserBaseListener.java  LuxParserListener.java
releases/: v0.0.2-beta.md
src/: main.cpp  prefix.h
src/IRBuilder/: IRGen.cpp  IRGen.h
src/LLVM_IR/: IRModule.cpp  IRModule.h
src/LLVM_Optimizer/: Optimizer.cpp  Optimizer.h
src/checkers/: Checker.cpp  Checker.h
src/cli/: ArgParser.cpp  ArgParser.h  BuildCommand.cpp  BuildCommand.h  CLI.cpp  CLI.h  CheckCommand.cpp  CheckCommand.h  Command.h  HelpCommand.cpp  HelpCommand.h  LucisPipeline.cpp  LucisPipeline.h  LuxPipeline.cpp  LuxPipeline.h  RunCommand.cpp  RunCommand.h  TestCommand.cpp  TestCommand.h  VersionCommand.h
src/config/: LucisConfig.cpp  LucisConfig.h
src/ffi/: ABIInfo.cpp  ABIInfo.h  CBindings.cpp  CBindings.h  CHeaderResolver.cpp  CHeaderResolver.h  CTypeMapper.cpp  CTypeMapper.h
src/helpc/: HelpC.cpp  HelpC.h  HelpCData.h  HelpCFormatter.cpp  HelpCFormatter.h  HelpCParser.cpp  HelpCParser.h  HelpCSearch.cpp  HelpCSearch.h
src/imports/: ImportResolver.cpp  ImportResolver.h
src/intrinsics/: IntrinsicRegistry.cpp  IntrinsicRegistry.h
src/lsp/: CompletionProvider.cpp  CompletionProvider.h  DefinitionProvider.cpp  DefinitionProvider.h  Diagnostic.h  DiagnosticEngine.cpp  DiagnosticEngine.h  DocComment.cpp  DocComment.h  DocumentStore.cpp  DocumentStore.h  LspServer.cpp  (+11 more)
tests/: array_features_full.lx  main.lx  tuples_full.lx  type_aliases_full.lx  unions_full.lx  vec_pointers.lx
(+87 files in other folders)
